Avoid Class#newInstance()
This method propagates checked exceptions uncleanly and generally should
not be used.  In many places we already did
`.getConstructor().newInstance()`, this fixes the remaining ones.